# ChangeLog for media-libs/speex
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/speex/ChangeLog,v 1.54 2007/03/22 17:15:36 beandog Exp $

  22 Mar 2007; Steve Dibb <beandog@gentoo.org> -speex-1.1.5.ebuild:
  Remove old version

  01 Mar 2007; <genstef@gentoo.org> ChangeLog:
  Dropped ppc-macos keyword, see you in prefix

  18 Jan 2007; Gustavo Zacarias <gustavoz@gentoo.org> speex-1.1.12.ebuild:
  Stable on sparc

  18 Jan 2007; Christian Faulhammer <opfer@gentoo.org> speex-1.1.12.ebuild:
  stable x86, bug #147795

  17 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> speex-1.1.11.1.ebuild,
  speex-1.1.12.ebuild:
  Add missing WANT_AUTOCONF/WANT_AUTOMAKE variables.

  12 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/speex-1.1.12-malloc.patch, speex-1.1.12.ebuild:
  Add patch to remove malloc.h inclusion, and mark ~x86-fbsd. Thanks to Alex
  Unleashed in bug #132793.

  19 Apr 2006; Patrick McLean <chutzpah@gentoo.org> +speex-1.1.5.ebuild:
  Re-add speex-1.1.5 since media-plugins/xmms-speex depends on it

*speex-1.1.12 (18 Apr 2006)

  18 Apr 2006; Patrick McLean <chutzpah@gentoo.org> +speex-1.1.12.ebuild,
  -speex-1.1.5.ebuild:
  Version bump, added vorbis-psy USE flag for new support for vorbis-style
  psychoacoustics (bug 130197), Clean up an old version.

  07 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> metadata.xml,
  speex-1.1.5.ebuild, speex-1.1.7.ebuild:
  Drop virtual/libc dependency.

  16 Jan 2006; Diego Pettenò <flameeyes@gentoo.org> +speex-1.1.5.ebuild:
  Re-add speex 1.1.5 that I forgot to ignore when removing old versions, sorry.

  15 Jan 2006; Diego Pettenò <flameeyes@gentoo.org>
  -files/speex-1.1.10-sse.patch, -speex-1.0.2.ebuild, -speex-1.0.3.ebuild,
  -speex-1.1.5.ebuild, -speex-1.1.10.ebuild:
  Drop old versions.

  03 Jan 2006; Diego Pettenò <flameeyes@gentoo.org> speex-1.1.11.1.ebuild:
  Fix issues with parallel make.

*speex-1.1.11.1 (03 Jan 2006)
