@@ -3,19 +3,14 @@ MD5 7df4b50ceda2456be6f0a3315c95c9b5 files/speex-1.1.12-malloc.patch 337
 RMD160 30eb657cf06b66ec80f7d4b66a9125f0d776726a files/speex-1.1.12-malloc.patch 337
 SHA256 67db66fb39f89845cb7efdf7ccab389016b667d2d4fa2883fa25adc555aa4e74 files/speex-1.1.12-malloc.patch 337
 DIST speex-1.1.12.tar.gz 740110 RMD160 24271522d1e1d4b8ccb2833d5fbd75b33789de07 SHA1 8d52c5fc51ae5fd3b1297e5aaa48872dd045a671 SHA256 77c8505bd9b73192789770299e0a727fba9c1d556d853b8cc473bfee393709f8
-DIST speex-1.1.5.tar.gz 600280 RMD160 4deae4534c068349d18d8ff67fc7ee073aad7f46 SHA1 97f54a4f73d72d2c59b80c5a5e2a91328cac0d53 SHA256 3e1d63e002ccb016b6976c76491192fbca810a6f69a0afaa0a059c40f8de9b20
-EBUILD speex-1.1.12.ebuild 1150 RMD160 5825e79a5de39c9f99aa756b456b5a736644d27d SHA1 d59b02b33f4a17dd6d7744a9346953bc0d8d320c SHA256 c49879a1c2c8c4744e65a00f7eb8ca75d27ecf64bf7fb6a6c77794c86111d95a
-MD5 68672f54cad0fd570b227ee2a525c2e3 speex-1.1.12.ebuild 1150
-RMD160 5825e79a5de39c9f99aa756b456b5a736644d27d speex-1.1.12.ebuild 1150
-SHA256 c49879a1c2c8c4744e65a00f7eb8ca75d27ecf64bf7fb6a6c77794c86111d95a speex-1.1.12.ebuild 1150
-EBUILD speex-1.1.5.ebuild 979 RMD160 a028ff0d71ea9aadb2e708060dab16c2f3ad8d27 SHA1 3feda2c14b61e059592e3ad0dccb4ef505dfaeaf SHA256 1ba9cc6e8b209e7750ac39027345018e9cb33a280023703be655f4aea2996284
-MD5 db5faeda99706699d61bd2a7fce224f9 speex-1.1.5.ebuild 979
-RMD160 a028ff0d71ea9aadb2e708060dab16c2f3ad8d27 speex-1.1.5.ebuild 979
-SHA256 1ba9cc6e8b209e7750ac39027345018e9cb33a280023703be655f4aea2996284 speex-1.1.5.ebuild 979
-MISC ChangeLog 7428 RMD160 45c81d5160e2fb2fda844154e5a03ac89d6710ca SHA1 59579018d8c25f1813f46340776493cb79fd9d85 SHA256 7f9c2a50fe20b32624dac3ad67c173fc149b2cfa8bc784b1eac5cdaa0b66804e
-MD5 9bd4bd195d70949e12c796ede549bf9f ChangeLog 7428
-RMD160 45c81d5160e2fb2fda844154e5a03ac89d6710ca ChangeLog 7428
-SHA256 7f9c2a50fe20b32624dac3ad67c173fc149b2cfa8bc784b1eac5cdaa0b66804e ChangeLog 7428
+EBUILD speex-1.1.12.ebuild 1150 RMD160 37bb4b4f3207e37d07547b4ebcb6ecb1318e34d0 SHA1 5657e4bb574af72c4395c789129a4c2d33da17ce SHA256 336876aa34da9fd9b8be38f78eeeadd3dab9c92ede78e571fb47932e61400b0e
+MD5 ec3b2f51a616c66f5b32dbf002668bc2 speex-1.1.12.ebuild 1150
+RMD160 37bb4b4f3207e37d07547b4ebcb6ecb1318e34d0 speex-1.1.12.ebuild 1150
+SHA256 336876aa34da9fd9b8be38f78eeeadd3dab9c92ede78e571fb47932e61400b0e speex-1.1.12.ebuild 1150
+MISC ChangeLog 7517 RMD160 14f8a2b682865cca78509d332e17c2fd639a2d83 SHA1 b2ac705461c6927ffdcc792563fd661fb375a2f8 SHA256 91f926274c78cbf15d33083951ea3fd9a49317a01534f9b39b0791326f3c0aec
+MD5 02b538274c8424c149f7ae05a5a70ab2 ChangeLog 7517
+RMD160 14f8a2b682865cca78509d332e17c2fd639a2d83 ChangeLog 7517
+SHA256 91f926274c78cbf15d33083951ea3fd9a49317a01534f9b39b0791326f3c0aec ChangeLog 7517
 MISC metadata.xml 217 RMD160 906a4752f7a779a157215dc1c5f05e8de62aeb4a SHA1 bb95f672fc20ce8075d27f34c751073cb97849d2 SHA256 cbd33766e3d30e5e0112ad6c57ffc10052659ebb132a0a16fb3462ea8c5a2789
 MD5 2f758c82434233f84f01f80f850a1112 metadata.xml 217
 RMD160 906a4752f7a779a157215dc1c5f05e8de62aeb4a metadata.xml 217
@@ -23,6 +18,3 @@ SHA256 cbd33766e3d30e5e0112ad6c57ffc10052659ebb132a0a16fb3462ea8c5a2789 metadata
 MD5 b84d36f735da8d050717b8b23153d6fd files/digest-speex-1.1.12 238
 RMD160 01050014c2fec5f1a32ec61ac9fa55df8c0ee24d files/digest-speex-1.1.12 238
 SHA256 156a6caf340c5bbcdc3413493758f35faf187fa6f6aac5883198d254ed22ab4b files/digest-speex-1.1.12 238
-MD5 f444cdc4c25a08c796938343b93d9f00 files/digest-speex-1.1.5 235
-RMD160 592333421e75d265e575b3a7ea2a08d8471178ff files/digest-speex-1.1.5 235
-SHA256 2e0a6711bc00ff3e8304f01615cdccc0e79956d840d1b08ae50b727aafdbee02 files/digest-speex-1.1.5 235
