@@ -1,3 +1,0 @@
-MD5 416dbe6c41aabfd289b6d7d4522a8d93 speex-1.1.5.tar.gz 600280
-RMD160 4deae4534c068349d18d8ff67fc7ee073aad7f46 speex-1.1.5.tar.gz 600280
-SHA256 3e1d63e002ccb016b6976c76491192fbca810a6f69a0afaa0a059c40f8de9b20 speex-1.1.5.tar.gz 600280
