@@ -1,42 +1,0 @@
-# Copyright 1999-2006 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/media-libs/speex/speex-1.1.5.ebuild,v 1.12 2006/04/19 13:11:09 chutzpah Exp $
-
-EAPI="prefix"
-
-IUSE="ogg sse"
-
-MY_P=${P/_/}
-S=${WORKDIR}/${MY_P}
-
-DESCRIPTION="Speex - Speech encoding library"
-HOMEPAGE="http://www.speex.org"
-SRC_URI="http://www.speex.org/download/${MY_P}.tar.gz"
-
-SLOT="0"
-LICENSE="BSD as-is"
-KEYWORDS="~amd64 ~ia64 ~ppc-macos ~x86 ~x86-macos"
-
-DEPEND="ogg? ( >=media-libs/libogg-1.0 )"
-
-src_compile() {
-	local myconf
-	use ogg && myconf="--enable-ogg=yes --with-ogg-dir=/usr" \
-		|| myconf="--enable-ogg=no"
-	if [ "${ARCH}" != "amd64" ]
-	then
-		use sse && myconf="${myconf} --enable-sse"
-	fi
-	econf ${myconf} || die
-	emake || die
-}
-
-src_install () {
-	einstall || die
-	rm -rf ${ED}/usr/share/doc/*
-
-	insinto /usr/share/doc/${P}
-	doins ${S}/doc/manual.pdf
-	dodoc AUTHORS ChangeLog README TODO NEWS
-}
-
